# kebi

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README_updates.md  configure.cmake  configure_tools.sh
LAMPS-HighEnergy/: CMakeLists.txt
LAMPS-HighEnergy/detector/: LHTpc.cc  LHTpc.hh  LinkDef.h
LAMPS-HighEnergy/geant4/: LHDetectorConstruction.cc  LHMagneticField.cc  TB20ADetectorConstruction.cc  TB22HDetectorConstruction.cc
LAMPS-HighEnergy/macros_tpc/: geant4_run.mac  geant4_vis.mac  kbpar_TB20A.conf  kbpar_TB22H.conf  kbpar_eve.conf  kbpar_single_particle.conf  run.C  run_TB20Amc.cc  run_eve.C  run_mc.cc
LAMPS-HighEnergy/reco/: LHGenfitTask.cc  LHGenfitTask.hh  LHSpacepointMeasurement.cc  LHSpacepointMeasurement.hh  LinkDef.h
LAMPS-HighEnergy/task/: LHDriftElectronTask.cc  LHDriftElectronTask.hh  LHElectronicsTask.cc  LHHelixTrackFindingTask.cc  LHHelixTrackFindingTask.hh  LinkDef.h
LAMPS/detector/: LAPPadPlane.cc  LAPPadPlane.hh  LAPTpc.cc  LAPadPlane.cc  LAPadPlane.hh  LATpc.cc  LATpc.hh  LinkDef.h
LAMPS/macros/: LAP.par  channels.C  digi.C  eve.C  eve_prototype.C  eve_tpc.C  lamps.mac  lamps.par  mc_tpc.cc  reco.C
LAMPS/task/: LADriftElectronTask.cc  LADriftElectronTask.hh  LAElectronicsTask.cc  LAElectronicsTask.hh  LAPBeamTrackingTask.cc  LAPBeamTrackingTask.hh  LAPDecoderTask.cc  LAPDecoderTask.hh  LAPNoiseSubtractionTask.cc  LAPNoiseSubtractionTask.hh  LATrackFinder.cc  LATrackFinder.hh  LATrackFindingTask.cc  LATrackFindingTask.hh  LAVertexFindingTask.cc  LAVertexFindingTask.hh  LinkDef.h
Project_EXAMPLE/: CMakeLists.txt
Project_EXAMPLE/detector/: EXDetector.cc  EXDetector.hh  EXDetectorPlane.cc  EXDetectorPlane.hh  LinkDef.h
Project_EXAMPLE/geant4/: EXDetectorConstruction.cc  EXDetectorConstruction.hh
Project_EXAMPLE/macros/: EXAMPLE.mc.cc  doSomething.C  eve.C  vis.mac
Project_EXAMPLE/task/: EXDoSomethingTask.cc  EXDoSomethingTask.hh  LinkDef.h
PrototypeTPC/: CMakeLists.txt
PrototypeTPC/detector/: LAPPadPlane.cc  LAPPadPlane.hh  LAPTpc.cc  LAPTpc.hh
PrototypeTPC/macros/: prototype.par  prototype_ELPH.par  prototype_KOMAC.par  prototype_eve.par  prototype_g4.par  run_eve.C  run_reco.C  run_reco_ELPH.C  run_reco_KOMAC.C
PrototypeTPC/macros_komac2019/: prototype_eve.par  prototype_komac.par  prototype_tf.par
PrototypeTPC/task/: LAPBeamTrackingTask.cc  LAPDecoderFromRootTask.cc  LAPDecoderTask.cc  LAPDecoderTask.hh  LAPNoiseSubtractionTask.cc  LAPNoiseSubtractionTask.hh  LAPTrackFindingTask.cc  LAPTrackFindingTask.hh  LinkDef.h
cmake/: FindGENFIT2.cmake  FindRAVE.cmake
dummy_project/macros/: dummy.mc.cc
input/: IQMD_short.gen  tripleGEM.root
log/: KBCompiled.h.in  KBLog.cmake.in  doxy.conf.in
macros/: make_project.sh  rootlogon.C
macros/dummies/: CMakeLists.txt  DUMMYDetector.cc  DUMMYDetector.hh  DUMMYDetectorConstruction.cc  DUMMYDetectorPlane.cc  DUMMYDoSomethingTask.cc  DUMMYDoSomethingTask.hh  LinkDefTask.h  PROJECTDetectorPlane.cc  PROJECTDetectorPlane.hh  doSomething.C  dummy.par  eve.C  ha  mc.cc  run_geant4.mac  run_geant4.par  vis.mac
macros/stereographic_projection/: :w  draw.C  style.h
project_lamps/detector/: LAPadPlane.cc  LATpc.cc
project_lamps/geant4/: LADetectorConstruction.cc  LADetectorConstruction.hh
project_lamps/macros/: eve.C  lamps.mac  mc.cc  vis.mac
project_lamps/task/: LADriftElectronTask.cc  LADriftElectronTask.hh  LAElectronicsTask.cc  LAElectronicsTask.hh  LATrackFinder.cc  LATrackFindingTask.cc  LAVertexFindingTask.cc  LinkDef.h
project_prototype_tpc/detector/: LAPPadPlane.cc  LAPTpc.cc  LAPTpc.hh
project_prototype_tpc/macros/: configureRun.C  decoding.C  eve.C  prototype.par
project_prototype_tpc/task/: LAPBeamTrackingTask.cc  LAPBeamTrackingTask.hh  LAPDecoderTask.cc  LAPDecoderTask.hh  LAPNoiseSubtractionTask.hh
source/base/: KBContainer.hh  KBGear.cc  KBGear.hh  KBGlobal.cc  KBGlobal.hh  KBMCEventGenerator.cc  KBMCEventGenerator.hh  KBParameterContainer.cc  KBParameterContainer.hh  KBParameterContainerHolder.cc  KBParameterContainerHolder.hh  KBRun.cc  KBRun.hh  KBTask.cc  KBTask.hh  LinkDef.h
source/detector/: KBDetector.cc  KBDetector.hh  KBDetectorPlane.cc  KBDetectorPlane.hh  KBDetectorSystem.cc  KBPadPlane.cc  KBPadPlane.hh  KBScintWall.cc  KBTpc.cc  KBTpc.hh  LinkDef.h
source/fit/: KBCurve.cc  KBH2Map.cc
source/format/: KBChannel.cc  KBChannel.hh  KBChannelBar.cc  KBChannelBar.hh  KBChannelBufferD.cc  KBChannelBufferD.hh  KBChannelBufferS.cc  KBChannelBufferS.hh  KBChannelBufferX.cc  KBChannelBufferX.hh  KBChannelHit.cc  KBChannelHit.hh  KBContainer.cc  KBContainer.hh  KBContainerMCTagged.cc  KBContainerMCTagged.hh  KBHelixTrack.cc  KBHelixTrack.hh  KBHit.cc  KBHit.hh  KBHitArray.cc  KBHitArray.hh  KBHitList.cc  KBHitList.hh  KBLinearTrack.cc  KBLinearTrack.hh  KBMCRecoMatching.cc  KBMCRecoMatching.hh  KBMCStep.cc  KBMCStep.hh  KBMCTrack.cc  KBMCTrack.hh  KBPad.cc  KBPad.hh  KBTpcHit.cc  KBTpcHit.hh  KBTrackModel.cc  KBTrackModel.hh  KBVector3.cc  KBVector3.hh  (+7 more)
source/geant4/: KBDetectorConstruction.cc  KBDetectorConstruction.hh  KBEventAction.cc  KBEventAction.hh  KBG4RunManager.cc  KBG4RunManager.hh  KBG4RunMessenger.cc  KBG4RunMessenger.hh  KBMCDataManager.cc  KBMCDataManager.hh  KBMCEventGenerator.cc  KBMCEventGenerator.hh  KBPrimaryGeneratorAction.cc  KBPrimaryGeneratorAction.hh  KBSteppingAction.cc  KBSteppingAction.hh  KBTrackingAction.cc  KBTrackingAction.hh
source/geometry/: KBGeo2DBox.cc  KBGeo2DBox.hh  KBGeoBox.cc  KBGeoBox.hh  KBGeoBoxStack.cc  KBGeoBoxStack.hh  KBGeoCircle.cc  KBGeoCircle.hh  KBGeoClosedPlane.cc  KBGeoClosedPlane.hh  KBGeoHelix.cc  KBGeoHelix.hh  KBGeoLine.cc  KBGeoLine.hh  KBGeoPlane.cc  KBGeoPlane.hh  KBGeoSphere.hh  KBGeometry.hh  LinkDef.h
source/tool/: KBGeoLine.cc  KBGeoLine.hh  KBODRFitter.cc  KBODRFitter.hh  KBPulseGenerator.cc  KBPulseGenerator.hh  KBSamplePoint.cc  KBSamplePoint.hh  KBVFMap.cc  KBVFMap.hh  LinkDef.h  (+6 more)
(+59 files in other folders)
